--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ a:visited {
 /*SETTING IN IMAGES*/
 
 .lightpic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/lighting/onblackbg copy.jpeg');
+    background: url('images/onblackbg copy.jpeg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -185,7 +185,7 @@ a:visited {
 
 
 .semanticpic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/semantics/close.jpg');
+    background: url('/images/close.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -199,7 +199,7 @@ a:visited {
 
 
 .photopic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/flower.JPG');
+    background: url('/images/flower.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -213,7 +213,7 @@ a:visited {
 
 
 .personalpic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/plants.jpg');
+    background: url('images/plants.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -227,7 +227,7 @@ a:visited {
 
 
 .animalpic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/adobe/poster.png');
+    background: url('/images/poster.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -241,7 +241,7 @@ a:visited {
 
 
 .perspectivepic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/midori_cubes.jpg');
+    background: url('images/midori_cubes.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -255,7 +255,7 @@ a:visited {
 
 
 .stuffingpic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/letter0195.png');
+    background: url('images/letter0195.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
