--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ a:visited {
 
 
 .semanticpic{
-    background: url('/images/close.jpg');
+    background: url('images/close.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -317,7 +317,7 @@ a:visited {
 }
 
 .uspic{
-    background: url('/Users/midorimonosoff/Desktop/try again/images/us.JPG');
+    background: url('images/us.JPG');
     height: 300px;
     background-size: cover;
     border-radius: 10%;
@@ -352,7 +352,7 @@ a:visited {
 
 .op{
     grid-area: op;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/lighting/onblackbg copy.jpeg');
+    background: url('images/onblackbg copy.jpeg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -369,7 +369,7 @@ a:visited {
 
 .it-on{
     grid-area: it-on;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/lighting/interation.JPG');
+    background: url('images/interation.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -377,7 +377,7 @@ a:visited {
 
 .it-off{
     grid-area: it-off;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/lighting/off.JPG');
+    background: url('images/off.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -394,7 +394,7 @@ a:visited {
 
 .vid{
     grid-area: vid;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/engulf.jpg');
+    background: url('images/engulf.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -402,7 +402,7 @@ a:visited {
 
 .detail{
     grid-area: detail;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/lighting/detail.JPG');
+    background: url('images/detail.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -445,7 +445,7 @@ a:visited {
 
 .og{
     grid-area: og;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/plants.jpg');
+    background: url('images/plants.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -462,7 +462,7 @@ a:visited {
 
 .ahead{
     grid-area: ahead;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/ms1-1(1).jpg');
+    background: url('images/ms1-1(1).jpg');
     height: 700px;
     width: 500px;
     background-size: cover;
@@ -471,7 +471,7 @@ a:visited {
 
 .skes{
     grid-area: skes;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/ms2(1).jpg');
+    background: url('images/ms2(1).jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -480,7 +480,7 @@ a:visited {
 
 .hot{
     grid-area: hot;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/ms3.jpg');
+    background: url('images/ms3.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -488,7 +488,7 @@ a:visited {
 
 .vote{
     grid-area: vote;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/mmmm2.jpg');
+    background: url('images/mmmm2.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -496,7 +496,7 @@ a:visited {
 
 .frog{
     grid-area: frog;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/mm1(2).jpg');
+    background: url('images/mm1(2).jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -504,7 +504,7 @@ a:visited {
 
 .pickle{
     grid-area: pickle;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/personal/10.jpg');
+    background: url('images/10.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -537,7 +537,7 @@ a:visited {
 
 .lady{
     grid-area: lady;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/flower.JPG');
+    background: url('images/flower.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -554,7 +554,7 @@ a:visited {
 
 .apple{
     grid-area: apple;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/bright.JPG');
+    background: url('images/bright.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -562,7 +562,7 @@ a:visited {
 
 .cake{
     grid-area: cake;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/Screen Shot 2022-05-19 at 11.36.10 PM.png');
+    background: url('images/cake.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -570,7 +570,7 @@ a:visited {
 
 .chair{
     grid-area: chair;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/chair.JPG');
+    background: url('images/chair.JPG');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -578,7 +578,7 @@ a:visited {
 
 .engulf{
     grid-area: engulf;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/engulf.jpg');
+    background: url('images/engulf.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -586,7 +586,7 @@ a:visited {
 
 .color{
     grid-area: color;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/color.jpg');
+    background: url('images/color.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -594,7 +594,7 @@ a:visited {
 
 .arch{
     grid-area: arch;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/arch.jpg');
+    background: url('images/arch.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -631,7 +631,7 @@ a:visited {
 
 .cubes{
     grid-area: cubes;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/midori_cubes.jpg');
+    background: url('images/midori_cubes.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -648,7 +648,7 @@ a:visited {
 
 .diffrnt{
     grid-area: diffrnt;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/Screen Shot 2022-05-19 at 8.13.32 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 8.13.32 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -656,7 +656,7 @@ a:visited {
 
 .hmmm{
     grid-area: hmmm;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/Screen Shot 2022-05-19 at 8.13.53 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 8.13.53 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -664,7 +664,7 @@ a:visited {
 
 .maybe1{
     grid-area: maybe1;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/Screen Shot 2022-05-19 at 8.14.07 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 8.14.07 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -681,7 +681,7 @@ a:visited {
 
 .maybe3{
     grid-area: maybe3;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/65665161741__E971CFDE-ED3A-425A-B0A8-9ED43611C83C.jpg');
+    background: url('images/65665161741__E971CFDE-ED3A-425A-B0A8-9ED43611C83C.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -689,7 +689,7 @@ a:visited {
 
 .maybe4{
     grid-area: maybe4;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/IMG_5229.jpg');
+    background: url('images/IMG_5229.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -734,7 +734,7 @@ a:visited {
 
 .sealsnip{
     grid-area: sealsnip;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/adobe/poster.png');
+    background: url('images/poster.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -751,7 +751,7 @@ a:visited {
 
 .sealwhole{
     grid-area: sealwhole;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/adobe/poster.png');
+    background: url('images/poster.png');
     height: 500px;
     background-size: cover;
     border-radius: 10%;
@@ -768,7 +768,7 @@ a:visited {
 
 .animation-link{
     grid-area: animation-link;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/photography/pittsburgh/engulf.jpg');
+    background: url('images/engulf.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -810,7 +810,7 @@ a:visited {
 
 .hybrid{
     grid-area: hybrid;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/semantics/close.jpg');
+    background: url('images/close.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -836,7 +836,7 @@ a:visited {
 
 .clay{
     grid-area: clay;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/Screen Shot 2022-05-19 at 8.13.53 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 8.13.53 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -853,7 +853,7 @@ a:visited {
 
 .foam{
     grid-area: foam;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/Screen Shot 2022-05-19 at 8.13.53 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 8.13.53 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -861,7 +861,7 @@ a:visited {
 
 .maybe3{
     grid-area: maybe3;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/65665161741__E971CFDE-ED3A-425A-B0A8-9ED43611C83C.jpg');
+    background: url('images/65665161741__E971CFDE-ED3A-425A-B0A8-9ED43611C83C.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -869,7 +869,7 @@ a:visited {
 
 .maybe4{
     grid-area: maybe4;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/perspective/IMG_5229.jpg');
+    background: url('images/IMG_5229.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -913,7 +913,7 @@ a:visited {
 
 .pan{
     grid-area: pan;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/letter0195.png');
+    background: url('images/letter0195.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -930,7 +930,7 @@ a:visited {
 
 .stick{
     grid-area: stick;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/IMG_4572 2.jpg');
+    background: url('images/IMG_4572 2.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -938,7 +938,7 @@ a:visited {
 
 .rock{
     grid-area: rock;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/IMG_4571 2.jpg');
+    background: url('images/IMG_4571 2.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -946,7 +946,7 @@ a:visited {
 
 .leaf{
     grid-area: leaf;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/IMG_4573 2.jpg');
+    background: url('images/IMG_4573 2.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -954,7 +954,7 @@ a:visited {
 
 .am{
     grid-area: am;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/Screen Shot 2022-05-19 at 11.26.27 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 11.26.27 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -962,7 +962,7 @@ a:visited {
 
 .fr{
     grid-area: fr;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/Screen Shot 2022-05-19 at 11.26.18 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 11.26.18 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
@@ -970,7 +970,7 @@ a:visited {
 
 .mi{
     grid-area: mi;
-    background: url('/Users/midorimonosoff/Desktop/try again/images/experiences/Screen Shot 2022-05-19 at 11.26.09 PM.png');
+    background: url('images/Screen Shot 2022-05-19 at 11.26.09 PM.png');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
