--- a/styles.css
+++ b/styles.css
@@ -820,7 +820,7 @@ a:visited {
 
 .lnd{
     grid-area: lnd;
-    background: url('images/Screen Shot 2022-05-19 at 8.14.07 PM.png');
+    background: url('images/all.jpg');
     height: 400px;
     background-size: cover;
     border-radius: 10%;
