--- a/styles.css
+++ b/styles.css
@@ -614,7 +614,7 @@ a:visited {
     grid-template-areas: 
     ". nav nav nav ."
     ". cubes diffrnt word ."
-    ". maybe2 hmmm probs1 ."
+    ". probs2 hmmm probs1 ."
     ". probs3 probs4 probs5 ." 
     ". footer footer footer .";
 }
